# CalcuPi

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  index.html
.github/workflows/: deploy.yml
pkg/: package.js  package_bg.wasm
src/: app.rs  canvas.rs  consts.rs  helpers.rs  lib.rs  view.rs
static/styles/: main.css
